[metadata]
name = azimuth-identity-operator
version = 0.1.0
description = Kubernetes operator for identity resources in Azimuth.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/azimuth-identity-operator


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    httpx
    kopf
    kube-custom-resource
    pydantic
    pyhelm3
    pyyaml
